test/invalid/bind.anf
mod bind {
    def test() {
        def exit = break;
        while (true)
            exit();
    }
    var x = return;
    var y = z;
    var y = z;
}
